Chen Wanted a folder for the flow

--- a/visual.html
+++ b/visual.html
@@ -5,110 +5,152 @@
 		<title>D3: Scatterplot!</title>
 		<script type="text/javascript" src="d3.v3.js"></script>
 		<style type="text/css">
-
-			body 
+			.chart-gauge 
 			{
-				background-color: #ccc;
+			  width: 400px;
+			  margin: 100px auto;
 			}
 
-			.buttonContainer 
+			.chart-color1 
 			{
-				margin: 10px;
+			  fill: #458B00;
 			}
 
-			svg 
+			.chart-color2 
 			{
-				background-color: white;
-			}
-			
-			.axis path,
-			.axis line 
-			{
-				fill: none;
-				stroke: black;
-				shape-rendering: crispEdges;
-			}
-			
-			.axis text 
-			{
-				font-family: sans-serif;
-				font-size: 11px;
+			  fill: #e6e600;
 			}
 
+			.chart-color3 
+			{
+			  fill: #e92213;
+			}
+
+			.needle,
+			.needle-center 
+			{
+			  fill: #464A4F;
+			}
 		</style>
 	</head>
 	<body>
+		<div class="buttonContainer">
+			<input type="button" value="Play">
+		</div>
+		<div class="chart-gauge"></div>
+			<script type="text/javascript">
+							(function() 
+				{
+				  var Needle, arc, arcEndRad, arcStartRad, barWidth, chart, chartInset, degToRad, el, endPadRad, height, margin, needle, numSections, padRad, percToDeg, percToRad, percent, radius, sectionIndx, sectionPerc, startPadRad, svg, totalPercent, width, _i;
 
-				<div class="buttonContainer">
-					<input type="button" value="Play">
-				</div>
-	
-				<script type="text/javascript">
+				  percent = .65;
 
-					var chart = c3.generate({
-			data: {
-				columns: [
-					['data', 91.4]
-				],
-				type: 'gauge',
-				onclick: function (d, i) { console.log("onclick", d, i); },
-				onmouseover: function (d, i) { console.log("onmouseover", d, i); },
-				onmouseout: function (d, i) { console.log("onmouseout", d, i); }
-			},
-			gauge: {
-		//        label: {
-		//            format: function(value, ratio) {
-		//                return value;
-		//            },
-		//            show: false // to turn off the min/max labels.
-		//        },
-		//    min: 0, // 0 is default, //can handle negative min e.g. vacuum / voltage / current flow / rate of change
-		//    max: 100, // 100 is default
-		//    units: ' %',
-		//    width: 39 // for adjusting arc thickness
-			},
-			color: {
-				pattern: ['#FF0000', '#F97600', '#F6C600', '#60B044'], // the three color levels for the percentage values.
-				threshold: {
-		//            unit: 'value', // percentage is default
-		//            max: 200, // 100 is default
-					values: [30, 60, 90, 100]
-				}
-			},
-			size: {
-				height: 180
-			}
-		});
+				  barWidth = 40;
 
-		setTimeout(function () {
-			chart.load({
-				columns: [['data', 10]]
-			});
-		}, 1000);
+				  numSections = 3;
 
-		setTimeout(function () {
-			chart.load({
-				columns: [['data', 50]]
-			});
-		}, 2000);
+				  sectionPerc = 1 / numSections / 2;
 
-		setTimeout(function () {
-			chart.load({
-				columns: [['data', 70]]
-			});
-		}, 3000);
+				  padRad = 0.05;
 
-		setTimeout(function () {
-			chart.load({
-				columns: [['data', 0]]
-			});
-		}, 4000);
+				  chartInset = 10;
 
-		setTimeout(function () {
-			chart.load({
-				columns: [['data', 100]]
-			});
-		}, 5000);
-		</script>
+				  totalPercent = .75;
+
+				  el = d3.select('.chart-gauge');
+
+				  margin = {
+					top: 20,
+					right: 20,
+					bottom: 30,
+					left: 20
+				  };
+
+				  width = el[0][0].offsetWidth - margin.left - margin.right;
+
+				  height = width;
+
+				  radius = Math.min(width, height) / 2;
+
+				  percToDeg = function(perc) {
+					return perc * 360;
+				  };
+
+				  percToRad = function(perc) {
+					return degToRad(percToDeg(perc));
+				  };
+
+				  degToRad = function(deg) {
+					return deg * Math.PI / 180;
+				  };
+
+				  svg = el.append('svg').attr('width', width + margin.left + margin.right).attr('height', height + margin.top + margin.bottom);
+
+				  chart = svg.append('g').attr('transform', "translate(" + ((width + margin.left) / 2) + ", " + ((height + margin.top) / 2) + ")");
+
+				  for (sectionIndx = _i = 1; 1 <= numSections ? _i <= numSections : _i >= numSections; sectionIndx = 1 <= numSections ? ++_i : --_i) {
+					arcStartRad = percToRad(totalPercent);
+					arcEndRad = arcStartRad + percToRad(sectionPerc);
+					totalPercent += sectionPerc;
+					startPadRad = sectionIndx === 0 ? 0 : padRad / 2;
+					endPadRad = sectionIndx === numSections ? 0 : padRad / 2;
+					arc = d3.svg.arc().outerRadius(radius - chartInset).innerRadius(radius - chartInset - barWidth).startAngle(arcStartRad + startPadRad).endAngle(arcEndRad - endPadRad);
+					chart.append('path').attr('class', "arc chart-color" + sectionIndx).attr('d', arc);
+					chart.append("text").attr("dy", "-5em").attr("dx", "-11.5em").attr("text-anchor", "left").text("No Risk");
+					chart.append("text").attr("dy", "-11em").attr("dx", "0em").attr("text-anchor", "middle").text("Some Risk");
+					chart.append("text").attr("dy", "-5em").attr("dx", "9em").attr("text-anchor", "right").text("Total Risk");
+				  }
+
+				  Needle = (function() {
+					function Needle(len, radius) {
+					  this.len = len;
+					  this.radius = radius;
+					}
+
+					Needle.prototype.drawOn = function(el, perc) {
+					  el.append('circle').attr('class', 'needle-center').attr('cx', 0).attr('cy', 0).attr('r', this.radius);
+					  return el.append('path').attr('class', 'needle').attr('d', this.mkCmd(perc));
+					};
+
+					Needle.prototype.animateOn = function(el, perc) {
+					  var self;
+					  self = this;
+					  return el.transition().delay(500).ease('elastic').duration(3000).selectAll('.needle').tween('progress', function() {
+						return function(percentOfPercent) {
+						  var progress;
+						  progress = percentOfPercent * perc;
+						  return d3.select(this).attr('d', self.mkCmd(progress));
+						};
+					  });
+					};
+
+					Needle.prototype.mkCmd = function(perc) {
+					  var centerX, centerY, leftX, leftY, rightX, rightY, thetaRad, topX, topY;
+					  thetaRad = percToRad(perc / 2);
+					  centerX = 0;
+					  centerY = 0;
+					  topX = centerX - this.len * Math.cos(thetaRad);
+					  topY = centerY - this.len * Math.sin(thetaRad);
+					  leftX = centerX - this.radius * Math.cos(thetaRad - Math.PI / 2);
+					  leftY = centerY - this.radius * Math.sin(thetaRad - Math.PI / 2);
+					  rightX = centerX - this.radius * Math.cos(thetaRad + Math.PI / 2);
+					  rightY = centerY - this.radius * Math.sin(thetaRad + Math.PI / 2);
+					  return "M " + leftX + " " + leftY + " L " + topX + " " + topY + " L " + rightX + " " + rightY;
+					};
+
+					return Needle;
+
+				  })();
+
+				  needle = new Needle(90, 15);
+
+				  needle.drawOn(chart, 0);
+
+				  needle.animateOn(chart, percent);
+
+				}).call(this);
+
+			</script>
+		</div>
 	</body>
 </html>
