--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,22 @@
 
 	<link href="css/1140.css" rel="stylesheet" type="text/css">
 	<link href="css/custom.css" rel="stylesheet" type="text/css">
+	<script src="deploy/jquery-2.1.3.min.js"></script>
+	<script>
+        
+	$(document).ready(function(){
+	  $(window).scroll(function()
+	  {
+		//scroll precenage
+		var s = $(window).scrollTop(),
+        d = $(document).height(),
+        c = $(window).height();
+        scrollPercent = (s / (d-c)) * 100;
+        console.log("Current scroll percent: " + scrollPercent);
+	  });
+	});
+
+	</script>
 
 </head>
 <body>
@@ -20,10 +36,10 @@
 		</aside>
 		<main>
 			<ul id="scene">
-				<li class="layer" data-depth="0.00"><img src="images/main.jpg"></li>
+				<li class="layer" id="scroll" data-depth="0.00"><img src="images/main.jpg"></li>
 				<li class="layer" id="first" data-depth="0.20"><img src="images/money.png"></li>
 				<li class="layer" id="second" data-depth="0.70"><img src="images/money.png"></li>
-				<li class="layer" id="third" data-depth="0.50"><img src="images/money.png"></li>
+				<li class="layer" id="third" data-depth="0.20"><img src="images/money.png"></li>
 				<li class="layer" id="fourth" data-depth="0.70"><img src="images/money.png"></li>
 				<li class="layer" id="fifth" data-depth="0.50"><img src="images/money.png"></li>
 			</ul>
@@ -39,7 +55,7 @@
 	// Pretty simple huh?
 	var scene = document.getElementById('scene');
 	var parallax = new Parallax(scene);
-
+	
 	</script>
 	
 </body>
