--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
 
@@ -8,10 +9,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<title>Pensya Team</title>
-
-	<link href="css/1140.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link href="css/custom.css" rel="stylesheet" type="text/css">
-	<script src="deploy/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="deploy/modernizr.min.js"></script>
+	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
 	<script>
         
 	$(document).ready(function(){
@@ -31,26 +32,48 @@
 </head>
 <body>
 	<div id="wrapper">
-		<header>
-		</header>
-		<aside id="left">
-		</aside>
 		<main>
-			<ul id="scene">
-				<li class="layer" id="scroll" data-depth="0.00"><img src="images/main.jpg"></li>
-				<li class="layer" id="first" data-depth="0.20"><img src="images/money.png"></li>
-				<li class="layer" id="second" data-depth="0.70"><img src="images/money.png"></li>
-				<li class="layer" id="third" data-depth="0.20"><img src="images/money.png"></li>
-				<li class="layer" id="fourth" data-depth="0.70"><img src="images/money.png"></li>
-				<li class="layer" id="fifth" data-depth="0.50"><img src="images/money.png"></li>
-			</ul>
+		
 		</main>
-		<aside id="right">
-		</aside>
+		<nav>
+			<div class="dotstyle dotstyle-hop">
+				<h2>Nav</h2>
+				<ul>
+					<li class="current"><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Products</a></li>
+					<li><a href="#">Portfolio</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Products</a></li>
+					<li><a href="#">Portfolio</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</nav>
+		<section>
+		
+		</section>
+		<footer>
+		
+		</footer>
 	</div>
 	
 	<!-- Scripts -->
-	<script src="deploy/parallax.min.js"></script>
+	<script src="deploy/dots.js"></script>
+	<script>
+		[].slice.call( document.querySelectorAll( '.dotstyle > ul' ) ).forEach( function( nav ) {
+			new DotNav( nav, {
+				callback : function( idx ) {
+					//console.log( idx )
+				}
+			} );
+		} );
+	</script>
+	<script type="text/javascript" src="deploy/parallax.min.js"></script>
 	<script>
 
 	// Pretty simple huh?
@@ -58,6 +81,5 @@
 	var parallax = new Parallax(scene);
 	
 	</script>
-	
 </body>
 </html>
