--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,10 +33,13 @@
 <body>
 	<div id="wrapper">
 		<main>
-		
+			<section id="sec1">
+			</section>
+			<section id="sec2">
+			</section>
 		</main>
 		<nav>
-			<div class="dotstyle dotstyle-hop">
+			<div class="dotstyle dotstyle-scaleup">
 				<ul>
 					<li class="current"><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
@@ -53,9 +56,9 @@
 				</ul>
 			</div>
 		</nav>
-		<section>
+		<aside>
 		
-		</section>
+		</aside>
 		<footer>
 		
 		</footer>
