--- a/src/html/index.html
+++ b/src/html/index.html
@@ -13,6 +13,7 @@
 	<link href="css/custom.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="deploy/modernizr.min.js"></script>
 	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
+	<script type="text/javascript" src="deploy/functions.js"></script>
 	<script>
         
 	$(document).ready(function(){
@@ -41,8 +42,8 @@
 		<nav>
 			<div class="dotstyle dotstyle-scaleup">
 				<ul>
-					<li class="current"><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
+					<li id="one" class="current"><a href="#">Home</a></li>
+					<li id="two"><a href="#">About</a></li>
 					<li><a href="#">Products</a></li>
 					<li><a href="#">Portfolio</a></li>
 					<li><a href="#">Blog</a></li>
