--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,6 +14,7 @@
 	<script type="text/javascript" src="deploy/modernizr.min.js"></script>
 	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="deploy/functions.js"></script>
+	<script type="text/javascript" src="deploy/jquery.color-2.1.2.js"></script>
 	<script>
         
 	$(document).ready(function(){
@@ -39,7 +40,7 @@
 			<section id="sec2">
 			</section>
 		</main>
-		<nav>
+		<nav id="nav">
 			<div class="dotstyle dotstyle-scaleup">
 				<ul>
 					<li id="one" class="current"><a href="#">Home</a></li>
