--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,40 +1,18 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
-
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="robots" content="index,follow">
-
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<title>Pensya Team</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	
 	<link href="css/custom.css" rel="stylesheet" type="text/css">
-	
 	<link href="css/social_buttons_footer.css" rel="stylesheet" type="text/css">
-	<script type="text/javascript" src="deploy/percentagePageFunctions.js"></script>
 	<script type="text/javascript" src="deploy/modernizr.min.js"></script>
 	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="deploy/functions.js"></script>
 	<script type="text/javascript" src="deploy/jquery.color-2.1.2.js"></script>
-	<script>
-        
-	$(document).ready(function(){
-	  $(window).scroll(function()
-	  {
-		//scroll precenage
-		var s = $(window).scrollTop(),
-        d = $(document).height(),
-        c = $(window).height();
-        scrollPercent = (s / (d-c)) * 100;
-        console.log("Current scroll percent: " + scrollPercent);
-	  });
-	});
-
-	</script>
-
+	<title>Pensya</title>
 </head>
 <body>
 	<div id="wrapper">
@@ -86,25 +64,5 @@
 				</div>
 		</footer>
 	</div>
-	
-	<!-- Scripts -->
-	<script src="deploy/dots.js"></script>
-	<script>
-		[].slice.call( document.querySelectorAll( '.dotstyle > ul' ) ).forEach( function( nav ) {
-			new DotNav( nav, {
-				callback : function( idx ) {
-					//console.log( idx )
-				}
-			} );
-		} );
-	</script>
-	<script type="text/javascript" src="deploy/parallax.min.js"></script>
-	<script>
-
-	// Pretty simple huh?
-	var scene = document.getElementById('scene');
-	var parallax = new Parallax(scene);
-	
-	</script>
 </body>
 </html>
