--- a/src/html/index.html
+++ b/src/html/index.html
@@ -37,9 +37,9 @@
 					</article>
 			</section>
 		</main>
-		<nav id="nav">
+		<nav>
 			<div class="dotstyle dotstyle-scaleup">
-				<ul>
+				<ul id="nav">
 					<li id="one" class="current"><a href="#">Home</a></li>
 					<li id="two"><a href="#">About</a></li>
 					<li><a href="#">Products</a></li>
