--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,14 +15,14 @@
 	<script type="text/javascript" src="deploy/dots.js"></script>
 	<title>Pensya</title>
 </head>
-<body onload ="selectedButton('5')">
+<body>
 	<div id="wrapper">
 		<main>
 			<section id="sec1">
 			</section>
 			<section id="sec2">
 					<article id="percentageButtons">
-						<button id="per5" value="5" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('5')"> 5%	 </button>
+						<button id="per5" value="5" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('5')">   5%	 </button>
 						<button id="per6" value="6" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('6')"> 	6%	 </button>
 						<button id="per7" value="7" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('7')"> 	7%	 </button>
 					</article>
