--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link href="css/custom.css" rel="stylesheet" type="text/css">
-	<link href="css/social_buttons_footer.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="deploy/modernizr.min.js"></script>
 	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="deploy/functions.js"></script>
@@ -17,11 +16,64 @@
 </head>
 <body>
 	<div id="wrapper">
+		<header>
+		</header>
+		<section id="title">
+		</section>
 		<main>
 			<section id="sec1">
 			</section>
-			<section id="sec2">
-					<article id="percentageButtons">
+			<section id="sec2">	
+			</section>
+			<section id="sec3">	
+			</section>
+			<section id="sec4">	
+			</section>
+			<section id="sec5">	
+			</section>
+			<section id="sec6">	
+			</section>
+			<section id="sec7">	
+			</section>
+			<section id="sec8">	
+			</section>
+			<section id="sec9">	
+			</section>
+			<section id="sec10">	
+			</section>
+		</main>
+		<nav>
+			<div class="dotstyle dotstyle-scaleup">
+				<ul id="nav">
+					<li data-sec="1" class="current navs" ><a href="#">Home</a></li>
+					<li data-sec="2" class="navs"><a href="#">About</a></li>
+					<li data-sec="3" class="navs"><a href="#">Products</a></li>
+					<li data-sec="4" class="navs"><a href="#">Portfolio</a></li>
+					<li data-sec="5" class="navs"><a href="#">Blog</a></li>
+					<li data-sec="6" class="navs"><a href="#">Contact</a></li>
+					<li data-sec="7" class="navs"><a href="#">Home</a></li>
+					<li data-sec="8" class="navs"><a href="#">About</a></li>
+					<li data-sec="9" class="navs"><a href="#">Products</a></li>
+					<li data-sec="10" class="navs"><a href="#">Portfolio</a></li>
+					<li data-sec="11" class="navs"><a href="#">Blog</a></li>
+					<li data-sec="12" class="navs"><a href="#">Contact</a></li>
+				</ul>
+			</div>
+		</nav>
+		<aside>
+		
+		</aside>
+		
+	</div>
+</body>
+</html>
+
+
+
+
+
+<!-- 
+<article id="percentageButtons">
 						<button id="per5" value="5" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('5')">   5%	 </button>
 						<button id="per6" value="6" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('6')"> 	6%	 </button>
 						<button id="per7" value="7" onclick="calcIt(document.getElementById('salary').value,this.value)" onmouseup="selectedButton('7')"> 	7%	 </button>
@@ -35,35 +87,4 @@
 						<p> הפרשה חודשית </p>
 						<p> אחרי 40 שנה </p>
 					</article>
-			</section>
-		</main>
-		<nav>
-			<div class="dotstyle dotstyle-scaleup">
-				<ul id="nav">
-					<li id="one" data-sec="1" class="current"><a href="#">Home</a></li>
-					<li id="two" data-sec="2"><a href="#">About</a></li>
-					<li><a href="#">Products</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Products</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</div>
-		</nav>
-		<aside>
-		
-		</aside>
-		<footer>
-				<div class="buttons">
-						<a class="twitter" href=""><img src="images/social_buttons/twitter.png" /></a>
-						<a class="facebook" href=""><img src="images/social_buttons/facebook.png" /></a>
-				</div>
-		</footer>
-	</div>
-</body>
-</html>
+ -->
