--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 	<meta name="robots" content="index,follow">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
-	<link href="css/custom.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" type="text/css" href="css/custom.css" >
 	<script type="text/javascript" src="deploy/modernizr.min.js"></script>
 	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="deploy/functions.js"></script>
 	<script type="text/javascript" src="deploy/jquery.color-2.1.2.js"></script>
+	<script type="text/javascript" src="deploy/dragable.js"> </script>
 
 	<title>Pensya</title>
 </head>
@@ -23,7 +24,9 @@
 		<main>
 			<section id="sec1">
 			</section>
-			<section id="sec2">	
+			<section id="sec2" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
+				<img src="images/Screen 2/Office_Empty.png">	
+				<img src="images/Screen 2/sofa_man.png">
 			</section>
 			<section id="sec3">	
 			</section>
