--- a/index.html
+++ b/index.html
@@ -23,10 +23,14 @@
 		</section>
 		<main>
 			<section id="sec1">
+				<input type="image" src="images/Screen 1/Boy.png" id="male">
+				</input>
+				<input type="image" src="images/Screen 1/Girl.png" id="female">
+				</input>
 			</section>
 			<section id="sec2" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
 				<img src="images/Screen 2/Office_Empty.png">	
-				<img src="images/Screen 2/sofa_man.png">
+				<img src="images/Screen 2/Sofa_Man.png">
 			</section>
 			<section id="sec3">	
 			</section>
