--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<input type="image" src="images/Screen 1/Girl.png" id="female">
 				</input>
 			</section>
-			<section id="sec2" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
+			<section id="sec2" ondragstart="dragStart(event)" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
 				<img src="images/Screen 2/Office_Empty.png">	
 				<img src="images/Screen 2/Sofa_Man.png">
 			</section>
