Drag and Drop Done!!!

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 				</input>
 			</section>
 			<section id="sec2" ondragstart="dragStart(event)" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
-				<img src="images/Screen 2/Office_Empty.png">	
-				<img src="images/Screen 2/Sofa_Man.png">
+				<img id="office" src="images/Screen 2/Office_Empty.png">	
+				<img id="sofa" src="images/Screen 2/Sofa_Man.png">
 			</section>
 			<section id="sec3">	
 			</section>
