Slider not working
@chen1203 i tried making a slider but it’s kind of hard!

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="deploy/functions.js"></script>
 	<script type="text/javascript" src="deploy/jquery.color-2.1.2.js"></script>
 	<script type="text/javascript" src="deploy/dragable.js"> </script>
+	<script type="text/javascript" src="deploy/jquery-ui.js"> </script>
 
 	<title>Pensya</title>
 </head>
@@ -23,10 +24,11 @@
 		</section>
 		<main>
 			<section id="sec1">
+				<input type="range" orient="vertical"> </input>
 				<input type="image" src="images/Screen 1/Boy.png" id="male">
 				</input>
 				<input type="image" src="images/Screen 1/Girl.png" id="female">
-				</input>
+				</input>   
 			</section>
 			<section id="sec2" ondragstart="dragStart(event)" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
 				<img id="office" src="images/Screen 2/Office_Empty.png">	
