Screen 1 almost done...
bug in selected gender, the new image moves to the right.

--- a/index.html
+++ b/index.html
@@ -25,31 +25,22 @@
 		<main>
 			<section id="sec1">
 				<input type="range" orient="vertical"> </input>
-				<input type="image" src="images/Screen 1/Boy.png" id="male">
-				</input>
-				<input type="image" src="images/Screen 1/Girl.png" id="female">
-				</input>   
+				<input type="image" src="images/Screen 1/Boy.png" id="male"></input>
+				<input type="image" src="images/Screen 1/Girl.png" id="female"></input> 
+				<img src="images/Screen 1/Age_Man_None.png" id="user"></img>  
 			</section>
 			<section id="sec2" ondragstart="dragStart(event)" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
 				<img id="office" src="images/Screen 2/Office_Empty.png">	
 				<img id="sofa" src="images/Screen 2/Sofa_Man.png">
 			</section>
-			<section id="sec3">	
-			</section>
-			<section id="sec4">	
-			</section>
-			<section id="sec5">	
-			</section>
-			<section id="sec6">	
-			</section>
-			<section id="sec7">	
-			</section>
-			<section id="sec8">	
-			</section>
-			<section id="sec9">	
-			</section>
-			<section id="sec10">	
-			</section>
+			<section id="sec3">	</section>
+			<section id="sec4">	</section>
+			<section id="sec5">	</section>
+			<section id="sec6">	</section>
+			<section id="sec7">	</section>
+			<section id="sec8">	</section>
+			<section id="sec9">	</section>
+			<section id="sec10"></section>
 		</main>
 		<nav>
 			<div class="dotstyle dotstyle-scaleup">
