--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/custom.css" >
+	<link rel="stylesheet" type="text/css" href="css/jquery-ui.css" >
 	<script type="text/javascript" src="deploy/modernizr.min.js"></script>
 	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="deploy/functions.js"></script>
@@ -33,8 +34,12 @@
 				<img id="office" src="images/Screen 2/Office_Empty.png">	
 				<img id="sofa" src="images/Screen 2/Sofa_Man.png">
 			</section>
-			<section id="sec3">	</section>
-			<section id="sec4">	</section>
+			<section id="sec3">
+				<div id="cin"><input name="paycheck" type="text" id="paycheck" placeholder="         הכנס את המשכורת שלך" size="30"></div>
+			</section>
+			<section id="sec4">	
+				
+			</section>
 			<section id="sec5">	</section>
 			<section id="sec6">	</section>
 			<section id="sec7">	</section>
