--- a/index.html
+++ b/index.html
@@ -33,14 +33,18 @@
 				<img id="office" src="images/Screen 2/Office_Empty.png">	
 				<img id="sofa" src="images/Screen 2/Sofa_Man.png">
 			</section>
-			<section id="sec3">	</section>
-			<section id="sec4">	</section>
-			<section id="sec5">	</section>
-			<section id="sec6">	</section>
-			<section id="sec7">	</section>
-			<section id="sec8">	</section>
-			<section id="sec9">	</section>
-			<section id="sec10"></section>
+			<section id="sec3">	3</section>
+			<section id="sec4">	4</section>
+			<section id="sec5">	5</section>
+			<section id="sec6">	6</section>
+			<section id="sec7">	7</section>
+			<section id="sec8">		
+					<div id="envelope_up"> </div>
+					<div id="envelope_down"> </div>
+					<div id="card"> </div>   
+			</section>
+			<section id="sec9">	9</section>
+			<section id="sec10">10</section>
 		</main>
 		<nav>
 			<div class="dotstyle dotstyle-scaleup">
