just order in css file

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 					<img id="sofa" src="images/Screen 2/Sofa_Man.png">
 			</section>
 			<section id="sec3">
-					<div id="cin"><input name="paycheck" type="text" id="paycheck" placeholder="         הכנס את המשכורת שלך" size="30"></div>
+					<div id="cin"><input name="paycheck" type="text" id="paycheck" placeholder="הכנס את המשכורת שלך     " size="30"></div>
 			</section>
-			<section id="sec4">	4 </section>
-			<section id="sec5">	5 </section>
-			<section id="sec6">	6 </section>
-			<section id="sec7">	7 </section>
+			<section id="sec4">	 </section>
+			<section id="sec5">	 </section>
+			<section id="sec6">	 </section>
+			<section id="sec7">	 </section>
 			<section id="sec8">		
 					<div id="envelope_up"> </div>
 					<div id="envelope_down"> </div>
 					<div id="card"> </div>   
 			</section>
-			<section id="sec9">	9 </section>
-			<section id="sec10">10 </section>
+			<section id="sec9">	</section>
+			<section id="sec10"> </section>
 		</main>
 		<nav>
 			<div class="dotstyle dotstyle-scaleup">
