--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 		</section>
 		<main>
 			<section id="sec1">
-					<input type="range" min="1" max="100"> </input>
+					<div id="slider_wrapper">
+						<div id="slider" class="draggable ui-widget-content"></div>
+					</div>
 					<input type="image" src="images/Screen 1/Boy.png" id="male"></input>
 					<input type="image" src="images/Screen 1/Girl.png" id="female"></input> 
 					<img src="images/Screen 1/Age_Man_None.png" id="user"></img>  
