--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 <body>
 	<div id="wrapper">
 		<header>
+			<div class="preload">
+				    <img src="images/Screen_4/money6per.png" alt="">
+					<img src="images/Screen_4/money7per.png" alt="">
+			</div>	
 		</header>
 		<section id="title">
 		</section>
@@ -39,7 +43,23 @@
 			<section id="sec3">
 					<div id="cin"><input name="paycheck" type="text" id="paycheck" placeholder="הכנס את המשכורת שלך     " size="30"></div>
 			</section>
-			<section id="sec4">	 </section>
+			<section id="sec4">	 
+					<h1> ?מה אחוז ההפרשה לקרן הפנסיה שלך	</h1>
+					<article id="percentageButtons">
+						<p class="perButton" id="per7"> <br>  7%	 </p>		
+						<p class="perButton" id="per6"> <br>	6%	 </p>
+						<p class="perButton selected" id="per5"> <br>	5%	 </p>
+					</article>
+					<article id="percentageInputs">
+						<input id="totalAmout" type="text" name="total_amount_after_40years" value="581,674" readonly> 
+						<input id="perMonth" type="text" name="monthly_secretion" value="450" readonly> 
+						<input id="salary" type="text" name="monthly_salary" value="9,000" readonly>
+						<br> <br>
+						<p> שכר חודשי שלך </p>
+						<p> הפרשה חודשית </p>
+						<p> בעוד 40 שנה </p>
+					</article>
+			</section>
 			<section id="sec5">	 </section>
 			<section id="sec6">	 </section>
 			<section id="sec7">	 </section>
