ToolTips for sec 6

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<header>
 			<div class="preload">
 				    <img src="images/Screen_4/money6per.png" alt="">
-					<img src="images/Screen_4/money7per.png" alt="">
+					<img src="" alt="">
 			</div>	
 		</header>
 		<section id="title">
@@ -78,6 +78,26 @@
 				<div id="danger">
 					<img   src="images/Screen 6/sign_danger.png">
 					<input type="image" src="images/Screen 6/plus_normal.png" id="p4"></input>
+				</div>
+				<div id="plus1">
+					<p>
+						מה בעצם אמור להיות כתוב כאן, הא?
+					</p>
+				</div>
+				<div id="plus2">
+					<p>
+						מסלול ביניים: רוב הכסף שלכם יינתן כהלוואה למדינה, ולחברות הגדולות הנסחרות בבורסה
+					</p>
+				</div>
+				<div id="plus3">
+					<p>
+						מסלול סולידי: רוב הכסף שלכם יינתן כהלוואה למדינה, מה שאמורה להיות השקעה בטוחה
+					</p>
+				</div>
+				<div id="plus4">
+					<p>
+						מסלול מסוכן: חלק גדול מהכסף שלכם יושקע במניות של חברות שונות בבורסה
+					</p>
 				</div>		
 			</section>
 			<section id="sec7">	 </section>
