some bugs fixed

--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 			<section id="sec6">	 
 				<div id="no_idea">
 					<img src="images/Screen 6/sign_no_idea.png">
-					<input type="image" src="images/Screen 6/plus_normal.png" id="p1"></input>
+					<input type="button" id="p1"></input>
 				</div>
 				<div id="medium">
 					<img  src="images/Screen 6/sign_medium.png">
-					<input type="image" src="images/Screen 6/plus_normal.png" id="p2"></input>
+					<input type="button" id="p2"></input>
 				</div>	
 				<div id="solid">
 					<img   src="images/Screen 6/sign_solid.png">
-					<input type="image" src="images/Screen 6/plus_normal.png" id="p3"></input>
+					<input type="button" id="p3"></input>
 				</div>	
 				<div id="danger">
 					<img   src="images/Screen 6/sign_danger.png">
-					<input type="image" src="images/Screen 6/plus_normal.png" id="p4"></input>
+					<input type="button" id="p4"></input>
 				</div>
 				<div id="plus1">
 					<p>
