Slider prepared of age groups
offset function is inside: .draggable({drag: function

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 		<main>
 			<section id="sec1">
 				<div id="slider_wrapper">
-					<div id="slider" class="draggable ui-widget-content"></div>
+					<div id="slider" class="draggable ui-widget-content">
+						<p id="slider_num"> 27 </p>
+					</div>
 				</div>
 				<input type="image" src="images/Screen 1/Boy.png" id="male"></input>
 				<input type="image" src="images/Screen 1/Girl.png" id="female"></input> 
