--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 		<header>
 			<div class="preload">
 				    <img src="images/Screen_4/money6per.png" alt="">
-					<img src="" alt="">
+					
+				    <img src="" alt="">
+	
 			</div>	
 		</header>
 		<section id="title">
@@ -108,7 +110,9 @@
 				<div id="envelope_up"> </div>
 				<div id="envelope_down"> </div>
 			</section>
-			<section id="sec9">	</section>
+			<section id="sec9">
+				
+			</section>
 			<section id="sec10"> </section>
 		</main>
 		<nav>
