--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="deploy/dragable.js"> </script>
 	<script type="text/javascript" src="deploy/jquery-ui.js"> </script>
 	<script type="text/javascript" src="deploy/jquery.easing.1.3.js"> </script>
+	<script type="text/javascript" src="deploy/jquery.backgroundpos.js"> </script>
 
 	<title>Pensya</title>
 </head>
@@ -111,7 +112,9 @@
 				<div id="envelope_down"> </div>
 			</section>
 			<section id="sec9">
-				
+				<div id="sec_text"></div>
+				<div id="B_no"></div>
+				<div id="B_yes"></div>
 			</section>
 			<section id="sec10"> </section>
 		</main>
