sec 10 first commit
missing: money bar

--- a/index.html
+++ b/index.html
@@ -112,11 +112,16 @@
 				<div id="envelope_down"> </div>
 			</section>
 			<section id="sec9">
-				<div id="sec_text"></div>
+				<div id="sec9_text"></div>
 				<div id="B_no"></div>
 				<div id="B_yes"></div>
 			</section>
-			<section id="sec10"> </section>
+			<section id="sec10"> 
+				<div id="sec10_text"></div>
+				<div id="boss_face"></div>
+			</section>
+			<section id="sec11"> </section>
+			<section id="sec12"> </section>
 		</main>
 		<nav>
 			<div class="dotstyle dotstyle-scaleup">
