--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
 			<section id="sec10"> 
 				<div id="sec10_text"></div>
 				<div id="boss_face"></div>
+				<div class="progressbar">
+					 <span class="progressbar-value"></span>
+					 <div id="progressbar-per"></div>
+				</div>
 			</section>
 			<section id="sec11">
 				 	<img src="images/Screen_11/info.png">  </img>
