pages 4+5 almost complete

--- a/index.html
+++ b/index.html
@@ -36,10 +36,15 @@
 				<input type="image" src="images/Screen 1/Girl.png" id="female"></input> 
 				<img src="images/Screen 1/Age_Man_None.png" id="user"></img>  
 			</section>
+			
+			
 			<section id="sec2" ondragstart="dragStart(event)" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
 				<img id="office" src="images/Screen 2/Office_Empty.png">	
 				<img id="sofa"   src="images/Screen 2/Sofa_Man.png">
 			</section>
+			
+			
+			
 			<section id="sec3">
 				<h1> ?מהי ההכנסה החודשית שלך </h1>
 				<div id="paycheck">
@@ -75,7 +80,28 @@
 								</article>
 						</section>
 			</section>
-			<section id="sec5">	 </section>
+			<section id="sec5" ondragstart="dragStart(event)" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">	 
+					<div id="slider-wrapper5">
+							<img id="drag_env" src="images/Screen_5/mini_env.png"> 
+							<div id="slider5">
+								<div class="sp"> </div>
+								<div class="sp"> </div>
+								<div class="sp"> </div>
+								<div class="sp"> </div>
+								<div class="sp"> </div>
+								<div class="sp"> </div>
+							</div>
+							<div id="button-previous">  </div>
+							<div id="button-next">  </div>
+					</div>	
+					<div id="envelope5_part">
+						<div id="little_check2">
+							<input id="check_no_changed2" value="" type="text" readonly> </input>
+						</div> 
+						<div id="env_up"> </div>
+						<div id="env_down"> </div>
+					</div>
+			</section>
 			<section id="sec6">	 
 				<div id="no_idea">
 					<img src="images/Screen 6/sign_no_idea.png">
