boss screen done

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 				<div id="envelope_down"> </div>
 			</section>
 			<section id="sec9">
+				<div id="hair"></div>
 				<div id="sec9_text"></div>
 				<div id="B_no"></div>
 				<div id="B_yes"></div>
@@ -158,6 +159,7 @@
 					 <span class="progressbar-value"></span>
 					 <div id="progressbar-per"></div>
 				</div>
+				<div id="boss_talk"></div>
 			</section>
 			<section id="sec11">
 				 	<img src="images/Screen_11/info.png">  </img>
