live txt in headers. and sec 6 gets font

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		</section>
 		<main>
 			<section id="sec1">
+				<h1> היי, כדאי שנכיר מעט קודם.. </h1>
 				<div id="slider_wrapper">
 					<div id="slider" class="draggable ui-widget-content">
 						<p id="slider_num"> 27 </p>
@@ -39,6 +40,7 @@
 			
 			
 			<section id="sec2" ondragstart="dragStart(event)" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
+				<h1> אל תתבטל, גרור את עצמך לעבודה </h1>
 				<img id="office" src="images/Screen 2/Office_Empty.png">	
 				<img id="sofa"   src="images/Screen 2/Sofa_Man.png">
 			</section>
@@ -103,6 +105,7 @@
 					</div>
 			</section>
 			<section id="sec6">	 
+				<h1> כל גיל והמסלול שלו </h1>
 				<div id="no_idea">
 					<img src="images/Screen 6/sign_no_idea.png">
 					<input type="button" id="p1"></input>
@@ -121,22 +124,26 @@
 				</div>
 				<div id="plus1">
 					<p>
-						מה בעצם אמור להיות כתוב כאן, הא?
+						<span class="headerz"> מסלול כללי: </span> <br>
+						מסלול ברירת המחדל. אם אין לכם מושג איזה מסלול אתם, קרוב לודאי שאתם כאן.
 					</p>
 				</div>
 				<div id="plus2">
 					<p>
-						מסלול ביניים: רוב הכסף שלכם יינתן כהלוואה למדינה, ולחברות הגדולות הנסחרות בבורסה
+						 <span class="headerz"> מסלול ביניים: </span> <br>
+						 רוב הכסף שלכם יינתן כהלוואה למדינה, ולחברות הגדולות הנסחרות בבורסה
 					</p>
 				</div>
 				<div id="plus3">
 					<p>
-						מסלול סולידי: רוב הכסף שלכם יינתן כהלוואה למדינה, מה שאמורה להיות השקעה בטוחה
+						 <span class="headerz"> מסלול סולידי: </span> <br>
+						 רוב הכסף שלכם יינתן כהלוואה למדינה, מה שאמורה להיות השקעה בטוחה
 					</p>
 				</div>
 				<div id="plus4">
 					<p>
-						מסלול מסוכן: חלק גדול מהכסף שלכם יושקע במניות של חברות שונות בבורסה
+						 <span class="headerz"> מסלול מסוכן: </span> <br>
+						 חלק גדול מהכסף שלכם יושקע במניות של חברות שונות בבורסה
 					</p>
 				</div>		
 			</section>
@@ -153,7 +160,8 @@
 				<div id="B_yes"></div>
 			</section>
 			<section id="sec10"> 
-				<div id="sec10_text"></div>
+				<h1> במשא ומתן על השכר, אפשר ללחוץ על הבוס <br>
+					 שהחיסכון לפנסיה יהיה מחושב מכל השכר </h1>
 				<div id="boss_face"></div>
 				<div class="progressbar">
 					 <span class="progressbar-value"></span>
