--- a/index.html
+++ b/index.html
@@ -124,25 +124,25 @@
 				</div>
 				<div id="plus1">
 					<p>
-						<span class="headerz"> מסלול כללי: </span> <br>
+						<span class="headerz"> :מסלול כללי </span> <br>
 						מסלול ברירת המחדל. אם אין לכם מושג איזה מסלול אתם, קרוב לודאי שאתם כאן.
 					</p>
 				</div>
 				<div id="plus2">
 					<p>
-						 <span class="headerz"> מסלול ביניים: </span> <br>
+						 <span class="headerz"> :מסלול ביניים </span> <br>
 						 רוב הכסף שלכם יינתן כהלוואה למדינה, ולחברות הגדולות הנסחרות בבורסה
 					</p>
 				</div>
 				<div id="plus3">
 					<p>
-						 <span class="headerz"> מסלול סולידי: </span> <br>
+						 <span class="headerz"> :מסלול סולידי </span> <br>
 						 רוב הכסף שלכם יינתן כהלוואה למדינה, מה שאמורה להיות השקעה בטוחה
 					</p>
 				</div>
 				<div id="plus4">
 					<p>
-						 <span class="headerz"> מסלול מסוכן: </span> <br>
+						 <span class="headerz"> :מסלול מסוכן </span> <br>
 						 חלק גדול מהכסף שלכם יושקע במניות של חברות שונות בבורסה
 					</p>
 				</div>		
@@ -154,6 +154,7 @@
 				<div id="envelope_down"> </div>
 			</section>
 			<section id="sec9">
+				<h1> ?משכת דמי פיצויים </h1>
 				<div id="hair"></div>
 				<div id="sec9_text"></div>
 				<div id="B_no"></div>
