--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="deploy/functions.js"></script>
 	<script type="text/javascript" src="deploy/jquery.color-2.1.2.js"></script>
-	<script type="text/javascript" src="deploy/dragable.js"> </script>
 	<script type="text/javascript" src="deploy/jquery-ui.js"> </script>
 	<script type="text/javascript" src="deploy/jquery.easing.1.3.js"> </script>
 	<script type="text/javascript" src="deploy/jquery.backgroundpos.js"> </script>
@@ -27,7 +26,7 @@
 		</section>
 		<main>
 			<section id="sec1">
-				<h1> היי, כדאי שנכיר מעט קודם.. </h1>
+				<h1> ..היי, כדאי שנכיר מעט קודם </h1>
 				<div id="slider_wrapper">
 					<div id="slider" class="draggable ui-widget-content">
 						<p id="slider_num"> 27 </p>
