sec 9 almost done...

--- a/index.html
+++ b/index.html
@@ -153,11 +153,16 @@
 				<div id="envelope_down"> </div>
 			</section>
 			<section id="sec9">
-				<h1> ?משכת דמי פיצויים </h1>
+				<h1 id="sec9_header"> ?משכת דמי פיצויים </h1>
 				<div id="hair"></div>
 				<div id="sec9_text"></div>
 				<div id="B_no"></div>
 				<div id="B_yes"></div>
+				<div id="crown"></div>
+				<div id="crown_info"></div> 
+				<div id="pull_info"></div> 
+				<div id="haircut_line"></div>
+				<div id="scissors"></div>
 			</section>
 			<section id="sec10"> 
 				<h1> במשא ומתן על השכר, אפשר ללחוץ על הבוס <br>
