sec9 fixed animation
still needs work on the cut hair…
old man does not get cut

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 				<h1> אל תתבטל, גרור את עצמך לעבודה </h1>
 				<img id="office" src="images/Screen 2/Office_Empty.png">	
 				<img id="sofa"   src="images/Screen 2/Sofa_Man.png">
+				<div id="sec2_info"></div>
 			</section>
 			
 			
