--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
@@ -13,7 +12,6 @@
 	<script type="text/javascript" src="deploy/jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="deploy/functions.js"></script>
 	<script type="text/javascript" src="deploy/jquery.color-2.1.2.js"></script>
-	<script type="text/javascript" src="deploy/dragable.js"> </script>
 	<script type="text/javascript" src="deploy/jquery-ui.js"> </script>
 	<script type="text/javascript" src="deploy/jquery.easing.1.3.js"> </script>
 	<script type="text/javascript" src="deploy/jquery.backgroundpos.js"> </script>
@@ -30,7 +28,7 @@
 			<section id="sec0">
 			</section>
 			<section id="sec1">
-				<h1> היי, כדאי שנכיר מעט קודם.. </h1>
+				<h1> ..היי, כדאי שנכיר מעט קודם </h1>
 				<div id="slider_wrapper">
 					<div id="slider" class="draggable ui-widget-content">
 						<p id="slider_num"> 27 </p>
@@ -40,12 +38,14 @@
 				<input type="image" src="images/Screen 1/Girl.png" id="female"></input> 
 				<img src="images/Screen 1/Age_Man_None.png" id="user"></img>  
 			</section>
+
 			<section id="sec2" ondragstart="dragStart(event)" ondragenter="dragEnter(event)" ondrop="dragDrop(event)" ondragover="dragOver(event)">
 				<h1> אל תתבטל, גרור את עצמך לעבודה </h1>
 				<img id="office" src="images/Screen 2/Office_Empty.png">	
 				<img id="sofa"   src="images/Screen 2/Sofa_Man.png">
+				<div id="sec2_info"></div>
 			</section>
-			
+
 			<section id="sec3">
 				<h1> ?מהי ההכנסה החודשית שלך </h1>
 				<div id="paycheck">
@@ -78,6 +78,7 @@
 									<input id="perMonth_in" type="text" name="monthly_secretion" value="450"> </label>	
 					</section>
 			</section>
+
 			<section id="sec5">	 
 					<h1> ?באיזו קרן פנסיה אתם חוסכים </h1>
 					<div id="slider-wrapper5">
@@ -101,6 +102,7 @@
 						<div id="env_down"> </div>
 					</div>
 			</section>
+
 			<section id="sec6">	 
 				<h1> כל גיל והמסלול שלו </h1>
 				<div id="no_idea">
@@ -144,18 +146,26 @@
 					</p>
 				</div>		
 			</section>
+		
 			<section id="sec7">	 </section>
+		
 			<section id="sec8">		
 				<div id="card"> </div>   
 				<div id="envelope_up"> </div>
 				<div id="envelope_down"> </div>
 			</section>
+		
 			<section id="sec9">
-				<h1> ?משכת דמי פיצויים </h1>
+				<h1 id="sec9_header"> ?משכת דמי פיצויים </h1>
 				<div id="hair"></div>
 				<div id="sec9_text"></div>
 				<div id="B_no"></div>
 				<div id="B_yes"></div>
+				<div id="crown"></div>
+				<div id="crown_info"></div> 
+				<div id="pull_info"></div> 
+				<div id="haircut_line"></div>
+				<div id="scissors"></div>
 			</section>
 			<section id="sec10"> 
 				<h1> במשא ומתן על השכר, אפשר ללחוץ על הבוס <br>
